Fixed missing bottom border on compact listings whilst in dark mode

--- a/app/assets/stylesheets/layout/lists/compact.css
+++ b/app/assets/stylesheets/layout/lists/compact.css
@@ -4,7 +4,7 @@
   padding: 0;
   width: 100%;
   table-layout: auto;
-  border-bottom: solid 1px rgba(0,0,0,0.1);
+  border-bottom: solid 1px var(--divider-color);
 }
 
 .listing.compact .row.heads {
